# cargo-web

./: .gitignore  .travis.yml  Cargo.toml  README.md  ci.sh
build-scripts/: Dockerfile.binaryen-i686  Dockerfile.binaryen-x86_64  Dockerfile.emscripten-i686  Dockerfile.emscripten-x86_64  build-binaryen-i686.sh  build-binaryen-x86_64.sh  build-emscripten-i686.sh  build-emscripten-x86_64.sh
build-scripts/binaryen/: build.rb  config.rb
build-scripts/common/: builder.sh  ci.rb  driver.sh
build-scripts/emscripten/: build.rb  config.rb
ci/: build_for_deployment.sh  run_tests.sh
integration-tests/: Cargo.toml  build.rs
integration-tests/src/: lib.rs  main.rs  tests.rs  utils.rs
src/: app_info.rs  build.rs  chrome_devtools.rs  cmd_build.rs  cmd_deploy.rs  cmd_prepare_emscripten.rs  cmd_start.rs  cmd_test.rs  config.rs  deployment.rs  emscripten.rs  error.rs  http_utils.rs  lib.rs  main.rs  package.rs  project_dirs.rs  test_chromium.rs  test_runner.js  utils.rs  wasm.rs  wasm_context.rs  wasm_export_main.rs  wasm_export_table.rs  wasm_gc.rs  wasm_hook_grow.rs  wasm_inline_js.rs  wasm_intrinsics.rs  wasm_js_export.rs  wasm_js_snippet.rs  wasm_runtime.js  wasm_runtime.rs  wasm_runtime_factory.js  wasm_runtime_library_es6.js  wasm_runtime_loader.js  wasm_runtime_only_loader.js  wasm_runtime_standalone.js  wasm_runtime_web_extension.js
src/app_dirs/: common.rs  mod.rs  utils.rs
src/cargo_shim/: cargo_output.rs  diagnostic_formatter.rs  mod.rs  rustc_diagnostic.rs
test-crates/async-tests/: Cargo.toml
test-crates/cdylib/: Cargo.toml
test-crates/cdylib-with-rlib/: Cargo.toml
test-crates/compilation-error/: Cargo.toml
test-crates/compiling-under-cargo-web-env-var/: Cargo.toml
test-crates/conflicting-versions/: Cargo.toml
test-crates/crate-with-integration-tests/: Cargo.toml
test-crates/crate-with-tests/: Cargo.toml
test-crates/custom_deploy_path/: Cargo.toml  Web.toml
test-crates/custom_deploy_path_invalid/: Cargo.toml  Web.toml
test-crates/custom_js_wasm_path/: Cargo.toml  Web.toml
test-crates/custom_serve_url/: Cargo.toml  Web.toml
test-crates/default-target-asmjs-unknown-emscripten/: Cargo.toml  Web.toml
test-crates/default-target-invalid/: Cargo.toml  Web.toml
test-crates/default-target-invalid-lib/: Cargo.toml
test-crates/default-target-wasm32-unknown-emscripten/: Cargo.toml  Web.toml
test-crates/default-target-wasm32-unknown-unknown/: Cargo.toml
test-crates/depends-on-cdylibs/: Cargo.toml
test-crates/depends-on-default-target-invalid/: Cargo.toml
test-crates/depends-on-dummy-v1/: Cargo.toml
test-crates/depends-on-dummy-v2/: Cargo.toml
test-crates/depends-on-prepend-js-two-targets/: Cargo.toml
test-crates/dev-depends-on-dylib/: Cargo.toml
test-crates/dummy-v1/: Cargo.toml
test-crates/dummy-v2/: Cargo.toml
test-crates/dylib/: Cargo.toml
test-crates/failing-integration-test/: Cargo.toml
test-crates/failing-integration-test-crate-types/: Cargo.toml
test-crates/failing-test/: Cargo.toml
test-crates/link-args-for-emscripten/: Cargo.toml  Web.toml
test-crates/link-args-per-target/: Cargo.toml  Web.toml
test-crates/mount-path/: Cargo.toml  Web.toml
test-crates/mount-path-wasm32-unknown-unknown/: Web.toml
test-crates/native-webasm/: Cargo.toml  run.js
test-crates/prepend-js/: Cargo.toml  Web.toml
test-crates/prepend-js-includable-only-once/: Cargo.toml
test-crates/prepend-js-lib/: Cargo.toml
test-crates/req-future-cargo-web-build-dep/: Cargo.toml
test-crates/req-future-cargo-web-cfg-dep/: Cargo.toml
test-crates/req-future-cargo-web-cfg-not-dep/: Cargo.toml
test-crates/req-future-cargo-web-dep/: Cargo.toml
test-crates/req-future-cargo-web-dep-and-dev-dep/: Cargo.toml
test-crates/req-future-cargo-web-dep-dep/: Cargo.toml
test-crates/req-future-cargo-web-dep-dev-dep/: Cargo.toml
test-crates/req-future-cargo-web-dev-dep/: Cargo.toml
test-crates/req-future-cargo-web-disabled-dep/: Cargo.toml
test-crates/req-future-cargo-web-target-dep/: Cargo.toml
test-crates/requires-future-cargo-web/: Cargo.toml  Web.toml
test-crates/requires-future-cargo-web-through-build-dep/: Cargo.toml
test-crates/requires-future-cargo-web-through-dep/: Cargo.toml
test-crates/requires-future-cargo-web-through-dep-and-dev-dep/: Cargo.toml
test-crates/requires-future-cargo-web-through-dep-dep/: Cargo.toml
test-crates/requires-future-cargo-web-through-dep-dev-dep/: Cargo.toml
test-crates/requires-future-cargo-web-through-dev-dep/: Cargo.toml
test-crates/requires-future-cargo-web-through-disabled-dep/: Cargo.toml
test-crates/requires-future-cargo-web-through-target-dep/: Cargo.toml
test-crates/requires-old-cargo-web/: Cargo.toml  Web.toml
test-crates/rlib/: Cargo.toml
test-crates/rlib-with-cdylib/: Cargo.toml
test-crates/runtime-library-es6/: Cargo.toml  run.mjs
test-crates/static-files/: Cargo.toml
test-crates/static-files-with-space/: Cargo.toml
test-crates/staticlib/: Cargo.toml
(+25 files in other folders)
