[package]
name = "cargo-web"
version = "0.6.14"
authors = ["Jan Bujak <j@exia.io>"]
repository = "https://github.com/koute/cargo-web"
homepage = "https://github.com/koute/cargo-web"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A Cargo subcommand for the client-side Web"
keywords = ["cargo", "subcommand", "web", "asmjs", "webasm"]
categories = ["development-tools", "development-tools::cargo-plugins", "web-programming"]

exclude = ["build-scripts/**"]

[dependencies]
clap = "2"
notify = "4"
tempdir = "0.3"
cargo_metadata = "0.5"
ansi_term = "0.11"
reqwest = "0.8"
pbr = "1"
libflate = "0.1"
tar = "0.4"
sha1 = "0.6"
sha2 = "0.7"
digest = "0.7"
toml = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
handlebars = "0.32"
unicode_categories = "0.1.1"
indexmap = "1"
websocket = "0.20"
regex = "0.2"
walkdir = "2"
base-x = "0.2"
memmap = "0.6"

parity-wasm = "0.19"
log = "0.4"
rustc-demangle = "0.1.5"
env_logger = "0.5.0-rc.2"
hyper = "0.11.12"
futures = "0.1.17"
open = "1"

[dependencies.semver]
features = ["serde"]
version = "0.9"

[features]
development-mode = []

# These are `app_dirs`'s dependencies.
[target.'cfg(all(unix, not(target_os="macos")))'.dependencies]
xdg = "^2.0.0"

[target.'cfg(windows)'.dependencies]
ole32-sys = "^0.2.0"
shell32-sys = "^0.1.1"
winapi = "^0.2.8"
