[package]
name = "cargo-web"
version = "0.6.26"
authors = ["Jan Bujak <j@exia.io>"]
repository = "https://github.com/koute/cargo-web"
homepage = "https://github.com/koute/cargo-web"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A Cargo subcommand for the client-side Web"
keywords = ["cargo", "subcommand", "web", "asmjs", "webasm"]
categories = ["development-tools", "development-tools::cargo-plugins", "web-programming"]

exclude = ["build-scripts/**"]

[dependencies]
clap = "2"
notify = "4"
tempfile = "3"
cargo_metadata = "0.6"
ansi_term = "0.11"
reqwest = "0.9"
pbr = "1"
libflate = "0.1"
tar = { version = "0.4", default-features = false }
sha1 = { version = "0.6", default-features = false}
sha2 = { version = "0.8", default-features = false}
digest = "0.8"
toml = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
handlebars = { version = "1", default-features = false, features = ["no_dir_source"] }
unicode_categories = "0.1.1"
indexmap = "1"
websocket = { version = "0.21", default-features = false, features = ["sync"]}
regex = "1"
walkdir = "2"
base-x = "0.2"
memmap = "0.7"
atty = "0.2"
directories = "2"
lazy_static = "1"
percent-encoding = "1"
mime_guess = { version = "1", default-features = false }

parity-wasm = "0.35"
log = "0.4"
rustc-demangle = "0.1.5"
env_logger = { version = "0.6", default-features = false}
hyper = {version = "0.12.12", default-features = false }
http = "0.1.13"
futures = "0.1.17"
open = "1"
failure = "0.1"
structopt = "0.2.14"

[dependencies.semver]
features = ["serde"]
version = "0.9"

[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "ios")))'.dependencies]
openssl-sys = { version = "= 0.9.45", features = ["vendored"] }

[features]
development-mode = []
